# My-stupid-website

./: .dockerignore  .gitignore  .semgrepignore  .trivyignore  CONTRIBUTING.md  README.md  docker-compose.website.yml  env.website.example  package-lock.json
.forgejo/workflows/: api-gateway-prod.yaml  api-gateway.yaml  build.yml  ci-cd-prod.yaml  ci-cd.yaml  deploy-infra.yml  fmd-prod.yaml  fmd.yaml  radio-service-prod.yaml  radio-service.yaml  release.yml  semgrep.yaml  ssh-terminal-prod.yaml  ssh-terminal.yaml  trivy.yaml
.github/: CODEOWNERS  dependabot.yml
.github-old/: dependabot.yml
.github-old/workflows/: api-gateway-prod.yaml  api-gateway.yaml  ci-cd-prod.yaml  ci-cd.yaml  radio-service-prod.yaml  radio-service.yaml  semgrep.yaml  ssh-terminal-prod.yaml  ssh-terminal.yaml
.github/workflows/: api-gateway-prod.yaml  api-gateway.yaml  ci-cd-prod.yaml  ci-cd.yaml  cleanup.yaml  codeql.yml  radio-service-prod.yaml  radio-service.yaml  semgrep.yaml  ssh-terminal-prod.yaml  ssh-terminal.yaml  trivy.yaml
api-gateway-service/: Cargo.toml  eslint.config.js  package.json
api-gateway-service/migrations/: 1000_create_gateway_postgres_state.sql
api-gateway-service/src/: app.rs  cache.rs  config.js  config.rs  contact.rs  cors.rs  docs.rs  frontend_config.rs  headers.rs  lib.rs  logger.js  logger.rs  main.rs  metrics.rs  migrations.rs  proxy.rs  redis_client.rs  request_context.rs  routing.rs  server.js  session.rs
api-gateway-service/src/cache/: index.js
api-gateway-service/src/server/: cors.js  headers.js  proxy.js  request-context.js  routing.js  session-manager.js
api-gateway-service/tests/: session_and_docs.rs
app/: bun.lockb  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
app/public/: manifest.webmanifest  robots.txt  sw.js
app/src/: App.tsx  index.css  lite-router.tsx  main.tsx  preact-compat-shim.ts
app/src/components/: CookieConsentBanner.tsx  DoNothingGame.tsx  SecureTerminal.tsx  route-loader.tsx
app/src/hooks/: use-terminal.ts  useKonamiCode.ts  useRadioFavorites.ts  useRadioStations.ts  useStations.ts
app/src/lib/: date-format.ts  favorites-session.ts  gateway-session.ts  logger.ts  terminalFs.ts  toast-manager.ts
app/src/pages/: Begud.tsx  Blog.tsx  BlogPost.tsx  Contact.tsx  DoNothingGamePage.tsx  Docs.tsx  Documents.tsx  Games.tsx  GatewayDocs.tsx  GitGud.tsx  Home.tsx  HowTo.tsx  Index.tsx  Konami.tsx  Motivation.tsx  NotFound.tsx  Radio.tsx  RadioDocs.tsx  Swagger.tsx  Terminal.tsx  TerminalDocs.tsx
app/src/pwa/: manifest.ts
app/src/styles/: progress-safe.css
app/static-lite/: index.html  measure.sh  prepare-lite.mjs
app1/: tailwind.config.ts
app1/src/: index.css
app1/src/pages/: Index.tsx
charts/api-gateway-service/: Chart.yaml  values-dev.yaml  values.yaml
charts/api-gateway-service/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  service.yaml
charts/fmd/: Chart.yaml  values-dev.yaml  values.yaml
charts/fmd/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  service.yaml
charts/my-stupid-website/: .helmignore  Chart.yaml  values-dev.yaml  values-radio-dev.yaml  values-radio.yaml  values-terminal-dev.yaml  values-terminal.yaml  values.yaml
charts/my-stupid-website/templates/: NOTES.txt  _helpers.tpl  configmap-runtime-config.yaml  deployment.yaml  hpa.yaml  httproute-fmd-rate-limit.yaml  httproute-www-redirect.yaml  httproute.yaml  ingress.yaml  kongplugin-fmd-rate-limit.yaml  radio-deployment.yaml  radio-service.yaml  service.yaml  serviceaccount.yaml  terminal-deployment.yaml  terminal-service.yaml
charts/radio-service/: Chart.yaml  values-dev.yaml  values.yaml
charts/radio-service/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  httproute.yaml  ingress.yaml  service.yaml
charts/terminal-service/: Chart.yaml  values-dev.yaml  values.yaml
deploy/: Caddyfile  nginx.conf  sitemap.js
deploy/infra/: docker-compose.services.yml
dioxus-app/: Cargo.toml  Dioxus.toml  index.html
dioxus-app/assets/: config.json  main.css
dioxus-app/assets/blog/: doomed.txt  the-logs.txt
dioxus-app/public/: manifest.webmanifest  sw.js
dioxus-app/public/assets/: main.css
dioxus-app/src/: blog.rs  config.rs  contact.rs  cookie_consent.rs  date.rs  do_nothing.rs  gateway_session.rs  hooks.rs  howto.rs  lib.rs  main.rs  posts.rs  radio.rs  routes.rs  swagger.rs  terminal.rs  terminal_shell.rs
dioxus-app/src/tools/: image_to_ascii.rs  mod.rs  web_to_markdown.rs
docker/: Dockerfile  api-gateway.Dockerfile  fmd.Dockerfile  radio-service.Dockerfile  terminal.Dockerfile
docs/plans/: 2025-12-12-layout-unification-design.md
fmd/: Cargo.toml
fmd/src/: app.rs  config.rs  fetch_md.rs  lib.rs  logger.rs  main.rs  render.rs
oldbits/app/: index.html  vite.config.ts
oldbits/terminal-service/: eslint.config.js
radio-service/: eslint.config.js  package-lock.json  package.json
radio-service-rs/: Cargo.toml  openapi.json
radio-service-rs/benches/: cache_formats.rs
radio-service-rs/migrations/: 001_create_station_tables.sql  002_alter_station_payloads_total.sql  003_create_radio_favorites.sql  004_create_radio_stream_validation_cache.sql
radio-service-rs/src/: app_state.rs  cache.rs  config.rs  database.rs  favorites.rs  hls.rs  http.rs  lib.rs  logging.rs  main.rs  migrations.rs  radio_browser.rs  refresh.rs  stream_format.rs  stream_pipeline.rs  stream_validation.rs
radio-service-rs/src/cache/: cache_client.rs  codec_msgpack.rs  mod.rs
radio-service-rs/src/stations/: fingerprint.rs  mod.rs  models.rs  persisted.rs  processed.rs  sanitize.rs  storage.rs
radio-service/src/: cache.js  config.js  logger.js  radioBrowser.js  redis.js  refresh.js  s3.js  server.js  service.js  stations.js
scripts/backup/: backup-db.sh  backup-files.sh  backup.env.template  backup.sh  restore-db.sh  restore-files.sh
scripts/dr/: check-backups.sh  recovery-protocol.sh  verify-stack.sh
terminal-service/: package.json
terminal-service-rs/: Cargo.toml
terminal-service-rs/src/: commands.rs  config.rs  logger.rs  main.rs  sandbox.rs
terminal-service/src/: config.js  index.js  logger.js
(+119 files in other folders)
