[package]
name = "api-gateway-service"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros", "json"] }
bytes = "1.10"
hex = "0.4"
hmac = "0.12"
http = "1.3"
http-body-util = "0.1"
hyper = { version = "1.8", features = ["full"] }
libc = "0.2"
percent-encoding = "2.3"
rand = "0.9"
redis = { version = "0.32", features = ["tokio-rustls-comp", "connection-manager"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
async-trait = "0.1"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal", "process"] }
tower = { version = "0.5", features = ["util", "timeout"] }
uuid = { version = "1.18", features = ["v4"] }
url = "2.5"
urlencoding = "2.1"
