[package]
name = "dioxus-app"
version = "0.1.0"
authors = ["Stas <stasbwork2@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.2", features = [] }
dioxus-router = "0.7.2"
serde = { version = "1.0.228", features = ["derive"] }
gloo-net = { version = "0.6.0", features = ["http"] }
gloo-storage = "0.3.0"
urlencoding = "2.1.3"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
