[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
incremental = false

[package]
name = "dioxus-app"
version = "0.1.0"
authors = ["Stas <stasbwork2@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.2", features = [] }
dioxus-router = "0.7.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
gloo-net = { version = "0.6.0", features = ["http"] }
gloo-storage = "0.3.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }
serde-wasm-bindgen = "0.6.5"
urlencoding = "2.1.3"
base64 = "0.22.1"
wasm-bindgen = "0.2.106"
wasm-bindgen-futures = "0.4.56"
js-sys = "0.3.83"
web-sys = { version = "0.3.83", features = ["Blob", "BlobPropertyBag", "CanvasRenderingContext2d", "Clipboard", "Document", "Element", "HtmlAnchorElement", "HtmlCanvasElement", "HtmlElement", "HtmlImageElement", "HtmlInputElement", "HtmlScriptElement", "ImageData", "IntersectionObserver", "IntersectionObserverEntry", "Navigator", "ServiceWorkerContainer", "Url", "UrlSearchParams", "Window"] }
tracing = "0.1.44"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
