[package]
name = "fmd"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
ammonia = "4.1"
axum = { version = "0.8", features = ["json"] }
futures-util = "0.3"
hostname = "0.4.2"
html2md = "0.2"
http = "1.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
scraper = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal"] }
url = "2.5"
uuid = { version = "1.19", features = ["v4"] }

[dev-dependencies]
pretty_assertions = "1.4"
