[package]
name = "radio-service-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "radio_service_rs"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.49", features = ["macros", "rt-multi-thread", "signal"] }
url = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.16.1", features = ["macros"] }
once_cell = "1.21"
thiserror = "2.0.17"
urlencoding = "2.1"
axum = { version = "0.8.8", default-features = false, features = ["macros", "tokio", "http1", "json", "query"] }
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "time",
    "json",
    "chrono",
    "migrate",
] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.13", features = ["json", "rustls", "stream"] }
futures-util = "0.3"
sysinfo = "0.37.2"
hostname = "0.4.2"
uuid = { version = "1.19", features = ["v4"] }
rmp-serde = "1.3"
lz4_flex = "0.12"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "cache_formats"
harness = false

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
incremental = false
