[package]
name = "terminal-service-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["json"] }
hostname = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.37.2"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1.49", features = ["fs", "macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["cors"] }
tower_governor = "0.8"
uuid = { version = "1.19", features = ["v4"] }
